--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11488,7 +11488,26 @@
 	<p class="footnote">3. Gen. 13, 1.</p>
 	<p class="footnote">4. Ex. 8, 16.</p>
 	<p class="footnote">5. Gen. 21, 14.</p>
-	
+	<p>Chapitre XV.</p>
+	<p>Conjonctions.</p>
+	<p>Voici les conjonctions qui donnent lieu à quelques remarques de grammaire.</p>
+	<p><em>ⲟⲩⲟϩ</em> (Ṣ. <em>ⲁⲩⲱ</em>), <em>ⲛⲉⲙ</em> (Ṣ. <em>ⲙⲛ̄</em>), <em>ϩⲓ</em> «et».</p>
+	<p><em>ⲟⲩⲟϩ</em> peut s'employer partout, mais de préférence il s'emploie pour unir les propositions:</p>
+	<p><em>ⲛ̀ⲑⲟϥ ⲁϥϫⲟⲥ ⲟⲩⲟϩ ⲁⲩϣⲱⲡⲓ</em> «il dit et les choses furent»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲛⲉⲙ</em> signifie proprement «avec» (316): il s'emploie donc quand «et» pourrait être remplacé par «avec», c.-à-d. entre les noms. Il relie rarement deux propositions (cf. Deut. 6, 7; 11, 19).</p>
+	<p><em>ϯⲁⲛⲁⲥⲧⲁⲥⲓⲥ ⲛⲉⲙ ⲡⲓⲱⲛϧ</em> «la résurrection et la vie»<sup class="footnote">2</sup>.</p>
+	<p><em>ϩⲓ</em> unit les noms qui n'ont pas d'article:</p>
+	<p><em>ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲥⲛⲟϥ ϩⲓ ⲭⲣⲟϥ</em> «un homme de sang et de malice»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲡⲓⲕⲁϩⲓ ⲉⲧϧⲁϯ ⲛ̀ⲉⲣⲱϯ ϩⲓ ⲉⲃⲓⲱ</em> «la terre où coule le lait et le miel. <em>الارض التي تدُرّ لبنَا وعسلَا</em>»<sup class="footnote">4</sup>.</p>
+	<p><em>ϫⲉ-</em></p>
+	<p>S'emploie:</p>
+	<p>1. pour annoncer le discours direct:</p>
+	<p><em>ⲁⲛⲟⲕ ⲇⲉ ϯϫⲱ ⲙ̀ⲙⲟⲥ ⲛⲱⲧⲉⲛ ϫⲉ ⲙⲉⲛⲣⲉ ⲛⲉⲧⲉⲛϫⲁϫⲓ</em> «moi, je vous dis: Aimez vos ennemis»<sup class="footnote">5</sup>.</p>
+	<p class="footnote">1. Ps. 32, 9.</p>
+	<p class="footnote">2. Jean 11, 25.</p>
+	<p class="footnote">3. Ps. 5, 7.</p>
+	<p class="footnote">4. Ex. 13, 5.</p>
+	<p class="footnote">5. Mt. 5, 44.</p>
 	</div>
 </div>
 	</body>
