--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11508,6 +11508,30 @@
 	<p class="footnote">3. Ps. 5, 7.</p>
 	<p class="footnote">4. Ex. 13, 5.</p>
 	<p class="footnote">5. Mt. 5, 44.</p>
+	<p><em>ⲁϥϣⲉⲛⲟⲩ ϫⲉ ⲁⲣⲉⲧⲉⲛⲕⲱϯ ⲛ̀ⲥⲁⲛⲓⲙ</em> «il leur demanda: Qui cherchez-vous?»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁϥϭⲱⲣⲉⲙ ⲉⲛⲓⲥⲛⲏⲟⲩ ϫⲉ ⲁⲙⲟⲛⲓ ⲙ̀ⲙⲟϥ</em> «il fit signe aux frères (en disant): Saisissez-le»<sup class="footnote">2</sup>.</p>
+	<p>2. Pour introduire le discours indirect, surtout après les verbes qui signifient «dire, déclarer, savoir, penser, voir». Nous le traduisons alors par «que».</p>
+	<p>On ne peut parfois distinguer si le discours est direct ou indirect.</p>
+	<p><em>ⲁϥⲉⲣⲟⲩⲱ ⲛ̀ϫⲉ ⲓ︤ⲏ︦ⲥ︥ ϫⲉ ⲁⲓϫⲟⲥ ⲛⲱⲧⲉⲛ ϫⲉ ⲁⲛⲟⲕ ⲡⲉ</em> «Jésus répondit: Je vous ai dit que c'était moi»<sup class="footnote">3</sup>.</p>
+	<p><em>ϯⲉⲙⲓ ϫⲉ ⲙ̀ⲡⲉⲧⲉⲛⲉⲣϩⲟϯ ϧⲁⲧϩⲏ ⲙ̀ⲫⲛⲟⲩϯ</em> «je sais que vous ne craignez pas Dieu»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲁϥⲛⲁⲩ ⲛ̀ϫⲉ ⲫⲛⲟⲩϯ ϫⲉ ⲛⲁⲛⲉϥ</em> «Dieu vit que c'était bien»<sup class="footnote">5</sup>.</p>
+	<p>3. Après les verbes qui signifient «appeler».</p>
+	<p><em>ⲉⲩⲉⲙⲟⲩϯ ⲉ ⲡⲉϥⲣⲁⲛ ϫⲉ ⲓ︤ⲏ︦ⲥ︥</em> «on l'appellera Jésus»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲁ ⲫϯ ⲙⲟⲩϯ ⲉⲡⲓⲟⲩⲱⲓⲛⲓ ϫⲉ ⲡⲓⲉϩⲟⲟⲩ</em> «Dieu appela la lumière le jour»<sup class="footnote">7</sup>.</p>
+	<p><em>ⲁϥϯⲣⲉⲛ ⲡⲉϥⲣⲁⲛ ϫⲉ ⲥⲏⲑ</em> «il l'appela Seth»<sup class="footnote">8</sup>.</p>
+	<p>4. Il indique la <i>cause</i>, la <i>raison</i> d'une chose:</p>
+	<p><em>ϥⲥⲙⲁⲣⲱⲟⲩⲧ ⲛ̀ϫⲉ ⲡϭⲥ ϫⲉ ⲁϥⲛⲟϩⲉⲙ ⲙ̀ⲡⲉϥⲗⲁⲟⲥ</em> «béni soit le Seigneur, car il a délivré son peuple»<sup class="footnote">9</sup>.</p>
+	<p><em>ⲙⲁⲣⲉⲛϩⲱⲥ ⲉ ⲡϭⲟⲓⲥ ϫⲉ ϧⲉⲛ ⲟⲩⲱⲟⲩ ⲅⲁⲣ ⲁϥϭⲓⲱⲟⲩ</em> «louons le Seigneur, car il a été grandement glorifié»<sup class="footnote">10</sup>.</p>
+	<p class="footnote">1. Jean 18, 7.</p>
+	<p class="footnote">2. MS. 424.</p>
+	<p class="footnote">3. Jean 18, 8.</p>
+	<p class="footnote">4. Ex. 9, 30.</p>
+	<p class="footnote">5. Gen. 1, 10.</p>
+	<p class="footnote">6. Luc 1, 31.</p>
+	<p class="footnote">7. Gen. 1, 5.</p>
+	<p class="footnote">8. Gen. 4, 3.</p>
+	<p class="footnote">9. Ex. 18, 10.</p>
+	<p class="footnote">10. Ex. 15, 21.</p>
 	</div>
 </div>
 	</body>
