--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11532,6 +11532,44 @@
 	<p class="footnote">8. Gen. 4, 3.</p>
 	<p class="footnote">9. Ex. 18, 10.</p>
 	<p class="footnote">10. Ex. 15, 21.</p>
+	<p><i>Chassez Macaire d'Edkou</i> <em>ϫⲉ ⲁ ⲟⲩⲥⲑⲉⲣⲧⲉⲣ ⲧⲁϩⲟⲛ</em> «car l'agitation s'est emparée de nous»<sup class="footnote">1</sup>.</p>
+	<p>Dans ce sens il est souvent suivi de <em>ⲟⲩⲏⲓ</em> «en vérité».</p>
+	<p><em>ϫⲉ ⲟⲩⲏⲓ ⲅⲁⲣ ⲡⲉϥϩⲁⲧ ⲡⲉ</em> «car, à la vérité, c'est son argent»<sup class="footnote">2</sup>.</p>
+	<p>5. Il indique le <i>but</i>, <i>l'intention</i>:</p>
+	<p><em>ⲁⲛⲓ̀ ϫⲉ ⲛ̀ⲧⲉⲛⲟⲩⲱϣⲧ ⲙ̀ⲙⲟϥ</em> «nous sommes venus pour l'adorer»<sup class="footnote">3</sup>.</p>
+	<p>6. <em>ϫⲉ</em> s'emploie comme le «de» français dans des expressions de ce genre: «le nom de magicien» <em>ⲡⲓⲣⲁⲛ ϫⲉ ⲙⲁⲅⲟⲥ</em><sup class="footnote">4</sup>.</p>
+	<p><em>ϫⲉ</em> (Ṣ. <em>ϭⲉ</em>).</p>
+	<p>Cette particule diffère de son homonyme par l'origine (ég. <i>gert</i>), par le sens et par l'emploi. Tandis que l'autre est proclitique, celle-ci est enclitique et signifie «mais, de plus, aussi». Elle s'emploie après une autre conjonction: <em>ϩⲟⲧⲉ ϫⲉ</em> «mais quand»<sup class="footnote">5</sup>. <em>ⲉⲡⲓⲇⲏ</em> «mais puisque»<sup class="footnote">6</sup>.</p>
+	<p><i>Composés de</i> <em>ϫⲉ</em>. <em>ϫⲉ</em> se combine avec quelques mots pour former les locutions suivantes:</p>
+	<p><em>ⲉⲑⲃⲉ ϫⲉ</em> (Ṣ. <em>ⲉⲧⲃⲉ ϫⲉ</em> «car, puisque»;</p>
+	<p><em>ⲉⲫⲙⲁ ϫⲉ</em> (Ṣ. <em>ⲉⲃⲟⲗ ϫⲉ</em>) «parce que».</p>
+	<p><i>Ils donnèrent de l'argent pour se délivrer</i> <em>ⲉⲑⲃⲉ ϫⲉ ϩⲁⲛⲙⲁⲓⲭⲣⲏⲙⲁ ⲛⲉ ⲛⲓⲁⲣⲭⲱⲛ ⲛ̀ⲧⲉ ⲡⲓⲑⲟϣ ⲉⲧⲉⲙⲙⲁⲩ</em> «car les magistrats de ce nome étaient cupides»<sup class="footnote">7</sup>.</p>
+	<p><i>Je bénirai en ta race toutes les nations de la terre</i> <em>ⲉⲫⲙⲁ ϫⲉ ⲁⲕⲥⲱⲧⲉⲙ ⲛ̀ⲥⲁ ⲧⲁⲥⲙⲏ</em> «parce que tu as obéi à ma voix»<sup class="footnote">8</sup>.</p>
+	<p class="footnote">1. MS. 422.</p>
+	<p class="footnote">2. Ex. 21, 21.</p>
+	<p class="footnote">3. Mt. 2, 2.</p>
+	<p class="footnote">4. AM. 239.</p>
+	<p class="footnote">5. C. 135, 13.</p>
+	<p class="footnote">6. C. 135, 31.</p>
+	<p class="footnote">7. MS. 422.</p>
+	<p class="footnote">8. Gen. 22, 18.</p>
+	<p><em>ϫⲉⲭⲁⲥ</em> (Ṣ. <em>ϫⲉⲕⲁⲥ</em>) «que, afin que, bien que». Ce mot est composé de <em>ϫⲉ</em> et de <em>ⲭⲁ-ⲥ</em>, état pronominal de <em>ⲭⲱ</em> «laisser», avec le pronom <em>ⲥ</em> du neutre:</p>
+	<p><i>Il se dit en lui-même</i> <em>ϫⲉⲭⲁⲥ ϫⲉ ⲫϯ ⲛ̀ϯⲉⲣϩⲟϯ ⲁⲛ ϧⲁⲧⲉϥϩⲏ</em> «bien que je ne craigne pas Dieu»<sup class="footnote">1</sup>.</p>
+	<p><em>ϫⲉⲭⲁⲥ ⲛ̀ⲥⲉⲉⲣⲡⲣⲉⲥⲃⲉⲩⲓⲛ ⲉϩⲣⲏⲓ ⲉϫⲱⲛ</em> «afin qu'ils intercèdent pour nous»<sup class="footnote">2</sup>.</p>
+	<p><em>ϫⲉ ⲕⲁⲛ</em> (<em>κἄν</em>) «lors même que»:</p>
+	<p><em>ⲡⲉϫⲁϥ ϫⲉ ϥⲟⲛϧ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ ϫⲉ ⲕⲁⲛ ⲁⲩϣⲁⲛϧⲟⲑⲃⲉⲧ ⲛ̀ϯⲛⲁϩⲱⲗ ⲁⲛ</em> «il dit: Vive le Seigneur, lors même qu'on me tuerait, je ne partirai point»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲟⲛ</em> «aussi, encore».</p>
+	<p>Vient après le mot qu'il détermine: <em>ϣⲧⲉⲙⲓ̀ ⲉ ⲡⲁⲓⲙⲁ ⲟⲛ</em> «ne pas revenir en ce lieu»<sup class="footnote">4</sup>. <em>ⲡⲉϫⲉ ⲫⲛⲟⲩϯ ⲟⲛ ⲙ̀ⲙⲱⲩⲥⲏⲥ</em> «Dieu dit encore à Moïse»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲛ̀ⲑⲟϥ</em> «mais».</p>
+	<p>Ce mot, employé comme conjonction, est rare:</p>
+	<p><i>Les bêtes de somme des Egyptiens moururent</i> <em>ⲉⲃⲟⲗ ϫⲉ ⲛ̀ⲑⲟϥ ϧⲉⲛ ⲛⲓⲧⲉⲃⲛⲱⲟⲩⲓ ⲛ̀ⲧⲉ ⲛⲉⲛϣⲏⲣⲓ ⲙ̀ⲡⲓⲥⲣⲁⲏⲗ ⲙ̀ⲡⲉ ϩⲗⲓ ⲙⲟⲩ</em> «mais, des bêtes de somme des enfants d'Israël, aucune ne mourut»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲛ̀ⲑⲟϥ</em> a aussi le sens de «plutôt», comme dans cette phrase:</p>
+	<p class="footnote">1. Luc 18, 4.</p>
+	<p class="footnote">2. AM. <i>Chrestomathie</i> p. 74.</p>
+	<p class="footnote">3. MS. 422.</p>
+	<p class="footnote">4. MS. 422.</p>
+	<p class="footnote">5. Ex. 3, 15.</p>
+	<p class="footnote">6. Ex. 9, 6.</p>
 	</div>
 </div>
 	</body>
