--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11570,6 +11570,42 @@
 	<p class="footnote">4. MS. 422.</p>
 	<p class="footnote">5. Ex. 3, 15.</p>
 	<p class="footnote">6. Ex. 9, 6.</p>
+	<p><em>ⲙ̀ⲡⲉⲛⲑⲣⲉⲛⲉⲣⲙ̀ⲕⲁϩ ⲛ̀ϩⲏⲧ ⲉⲑⲃⲉ ϩⲗⲓ ⲛ̀ϩⲱⲃ ⲉⲑⲛⲁⲓ̀ ⲁⲗⲗⲁ ⲙⲁⲣⲉⲛⲉⲣⲙ̀ⲕⲁϩ ⲛ̀ⲑⲟϥ ⲉⲑⲃⲉ ⲡϫⲣⲟϩ ⲛ̀ⲛⲉⲛⲯⲩⲭⲏ</em> «ne nous attristons pas des malheurs qui peuvent nous arriver, mais affligeons-nous plutôt de l'indigence de nos âmes»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲓⲉ</em> (Ṣ <em>ⲏ</em>) «ou, ou bien».</p>
+	<p><em>ⲓⲥϫⲉ ⲁⲕⲛⲁⲩ ⲓⲉ ⲁⲕⲥⲱⲧⲉⲙ</em> «si tu as vu ou entendu»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲡⲉϥⲓⲱⲧ ⲓⲉ ⲧⲉϥⲙⲁⲩ</em> «son père ou sa mère»<sup class="footnote">3</sup>.</p>
+	<p>En se répétant elle forme le dilemme: <em>ⲁⲣⲓ ⲟⲩⲁⲓ ϧⲉⲛ ⲡⲁⲓⲃ̅ ⲓⲉ ⲛ̀ⲧⲉⲕϯⲭⲣⲱⲙ ⲛ̀ⲧⲁϣⲗⲏⲗ ⲓⲉ ⲛ̀ⲧⲉⲕϣⲗⲏⲗ ⲛ̀ⲧⲁϯⲭⲣⲱⲙ</em> «choisis un des deux, ou bien mets le feu et je prierai, ou bien prie et je mettrai le feu»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲓⲉ</em> (Ṣ <em>ⲉⲓⲉ</em>, <em>ⲉⲉⲓⲉ</em>).</p>
+	<p>Cette particule, qu'il faut distinguer de la précédente, s'emploie entre une proposition conditionnelle et la proposition principale dont elle dépend, avec le sens de «pourtant, cependant, dans ce cas, alors».</p>
+	<p><em>ⲕⲁⲛ ⲁϥϣⲧⲉⲙⲓⲛⲓ ⲙ̀ⲡⲓⲙⲱⲟⲩ ⲓⲉ ⲟⲩϣⲁⲛϩⲑⲏϥ ⲡⲉ</em> «lors même qu'il n'amènerait point l'eau, cependant il est miséricordieux»<sup class="footnote">5</sup>.</p>
+	<p>Cette tournure est surtout usitée lorsque la proposition principale exprime une demande, une interrogation, une exclamation.</p>
+	<p><em>ⲓⲉ ⲉⲑⲃⲉ-ⲟⲩ ⲕϯⲱⲙⲥ ⲓⲥϫⲉ ⲛ̀ⲑⲟⲕ ⲁⲛ ⲡⲉ ⲡⲭ︤ⲥ︥</em> «pourquoi alors baptises-tu, si tu n'es pas le Christ?»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲓⲥϫⲉ ⲙ̀ⲙⲟⲛ ϩⲱⲃ ⲛ̀ⲧⲏⲓ ⲛⲉⲙⲱⲧⲉⲛ ⲓⲉ ⲟⲩ ⲡⲉⲧⲉⲛϩⲱⲃ ⲛⲉⲙ ⲛⲓϣⲏⲣⲓ ⲛ̀ⲧⲉ ⲛⲓⲭⲣⲓⲥⲧⲓⲁⲛⲟⲥ</em> «si je n'ai rien à faire avec vous, qu'avez-vous à faire avec les enfants des chrétiens?»<sup class="footnote">7</sup>.</p>
+	<p><i>S'il rend la vue aux aveugles</i> <em>ⲓⲉ ⲟⲩ-ⲁϣ ⲛ̀ⲣⲏϯ ⲡⲉ ⲡⲓⲣⲱⲙⲓ ⲉⲧⲉⲙⲙⲁⲩ</em> «quel est donc cet homme-là?»<sup class="footnote">8</sup>.</p>
+	<p class="footnote">1. P. 220.</p>
+	<p class="footnote">2. Kef. 411.</p>
+	<p class="footnote">3. Ex. 21, 15.</p>
+	<p class="footnote">4. MS. 424.</p>
+	<p class="footnote">5. Kef. 412.</p>
+	<p class="footnote">6. Jean 1, 25.</p>
+	<p class="footnote">7. MS, 433.</p>
+	<p class="footnote">8. D. 574.</p>
+	<p>V. Des Propositions.</p>
+	<p>Les propositions se divisent en <i>verbales</i> et en <i>nominales</i>.</p>
+	<p>La proposition verbale est celle qui contient un verbe à un mode quelconque; la proposition nominale, celle qui ne contient pas de verbe.</p>
+	<p>Au point de vue de la dépendance, les propositions sont indépendantes ou subordonnées.</p>
+	<p>Nous traiterons d'abord de la proposition verbale et de la proposition nominale en général et spécialement quand elles sont indépendantes.</p>
+	<p>Nous verrons ensuite les différentes espèces de propositions qui ont une syntaxe particulière.</p>
+	<p>Chapitre XVI.</p>
+	<p>Proposition Verbale.</p>
+	<p>I. Ordre de ses éléments.</p>
+	<p>1. L'ordre des éléments de la proposition verbale est généralement le suivant:</p>
+	<p>1. Auxiliaire;</p>
+	<p>2. Sujet, nom ou pronom affixe;</p>
+	<p>3. Verbe;</p>
+	<p>4. Complément direct;</p>
+	<p>5. Complément indirect;</p>
+	<p>6. Compléments circonstantiels.</p>
 	</div>
 </div>
 	</body>
