--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11606,6 +11606,109 @@
 	<p>4. Complément direct;</p>
 	<p>5. Complément indirect;</p>
 	<p>6. Compléments circonstantiels.</p>
+	<p><em>ⲁϥϯ ⲛ̀ⲟⲩϩⲙⲟⲧ ⲙ̀ⲡⲉϥⲗⲁⲟⲥ ⲙ̀ⲡⲉⲙⲑⲟ ⲛ̀ⲛⲓⲣⲉⲙⲛ̀ⲭⲏⲙⲓ</em> «il donna la faveur à son peuple devant les Egyptiens»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁ ⲫⲛⲟⲩϯ ⲑⲁⲙⲓⲟ ⲛ̀ⲧⲫⲉ ⲛⲉⲙ ⲡⲕⲁϩⲓ</em> «Dieu créa le ciel et la terre»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲁ ⲡϭⲟⲓⲥ ⲓⲛⲓ ⲛ̀ⲟⲩⲑⲟⲩⲣⲏⲥ ⲉϫⲉⲛ ⲡⲓⲕⲁϩⲓ ⲙ̀ⲡⲓⲉϩⲟⲟⲩ ⲧⲏⲣϥ</em> «le Seigneur fit venir un vent brûlant sur la terre, tout le jour»<sup class="footnote">3</sup>.</p>
+	<p>2. Lorsque le verbe est à l'état absolu et que le complément indirect est un pronom, celui-ci passe avant le complément direct:</p>
+	<p><em>ⲁ ⲡϭⲟⲓⲥ ⲥⲉⲙⲛⲓ ⲛⲁϥ ⲛ̀ϩⲁⲛϩⲁⲡ</em> «le Seigneur lui donna des préceptes»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲙⲁ ⲛⲓⲣⲱⲙⲓ ⲛⲏⲓ ϭⲓ ⲇⲉ ⲛⲁⲕ ⲛ̀ⲛⲓϩⲑⲱⲣ</em> «donne-moi les hommes et prends les chevaux»<sup class="footnote">5</sup>.</p>
+	<p>3. Lorsque le verbe est accompagné de l'adverbe <em>ⲉⲃⲟⲗ</em>, celui-ci se place après le complément direct; dans le cas précédent (2) et lorsque le verbe est à l'état pronominal, il se met après le complément indirect:</p>
+	<p><em>ⲟⲩⲱⲣⲡ ⲙ̀ⲡⲁⲗⲁⲟⲥ ⲉⲃⲟⲗ</em> «renvoie mon peuple»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲛ̀ⲛⲉϥⲟⲩⲟⲛϩϥ ⲛⲁⲕ ⲉⲃⲟⲗ</em> «il ne se montrera pas à toi»<sup class="footnote">7</sup>.</p>
+	<p>II. Prolepse.</p>
+	<p>L'ordre qu'on vient d'indiquer est souvent changé. Lorsqu'on veut faire ressortir un élément, on le met en tête de la proposition en le remplaçant, si c'est le sujet ou un complément, par un pronom (<em>ضمير عائد</em>) qui s'accorde avec lui.</p>
+	<p class="footnote">1. Ex. 11, 3.</p>
+	<p class="footnote">2. Gen. 1, 1.</p>
+	<p class="footnote">3. Ex. 10, 13.</p>
+	<p class="footnote">4. Ex. 15, 25.</p>
+	<p class="footnote">5. Gen. 14, 21.</p>
+	<p class="footnote">6. Ex. 10, 3.</p>
+	<p class="footnote">7. Ex. 13, 7.</p>
+	<p>Nous appelons cette figure la <i>prolepse</i>. C'est une construction très fréquente en copte, surtout dans l'Ecriture sainte où les traducteurs ont tenu à conserver l'ordre des mots du texte grec.</p>
+	<p>La prolepse a lieu de deux manières.</p>
+	<p><i>1. Sans particule.</i></p>
+	<p>L'élément mis en évidence précède la proposition sans être introduit par aucune particule, surtout quand la proposition est unie à la précédente par <em>ⲅⲁⲣ</em> «car», <em>ⲇⲉ</em> «mais».</p>
+	<p><i>Prolepse du sujet:</i></p>
+	<p><em>ⲛ̀ⲑⲟϥ ⲅⲁⲣ ⲁϥⲧⲱⲛϥ ⲉⲃⲟⲗ ϧⲉⲛ ⲛⲓⲣⲉϥⲙⲱⲟⲩⲧ</em> «car il est ressuscité d'entre les morts»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲡⲁⲓⲱⲧ ⲇⲉ ⲁϥⲙⲟϣⲓ ⲉϧⲟⲩⲛ</em> «mais mon père entra»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲟⲩⲭⲁⲕⲓ ⲛⲁϥⲭⲏ ⲉϫⲉⲛ ⲫⲛⲟⲩⲛ</em> «les ténèbres étaient sur l'abîme»<sup class="footnote">3</sup>.</p>
+	<p>Dans ce même cas, on emploie souvent les temps composés de l'auxiliaire <em>ⲉ</em> (248), et du pronom relatif <em>ⲉⲧ</em> surtout quand le sujet est un pronom. Cf. Andersson, AB. 40, 41.</p>
+	<p><em>ⲫⲁⲓ ⲉⲛⲁϥⲭⲏ ⲓⲥϫⲉⲛ ϩⲏ ϧⲁⲧⲉⲛ ⲫϯ</em> «celui-ci était au commencement avec Dieu»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲣⲱⲙⲓ ⲛⲓⲃⲉⲛ ⲉϣⲁⲩⲭⲱ ⲙ̀ⲡⲓⲏⲣⲡ ⲉⲑⲛⲁⲛⲉϥ ⲛ̀ϣⲟⲣⲡ</em> «tout homme met d'abord le bon vin»<sup class="footnote">5</sup>.</p>
+	<p><i>Prolepse du complément direct:</i></p>
+	<p><em>ⲟⲩϩⲑⲟ ⲛⲉⲙ ⲟⲩϭⲁⲥⲓϩⲑⲟ ⲁϥⲃⲉⲣⲃⲱⲣⲟⲩ ⲉⲫⲓⲟⲙ</em> «il a précipité dans la mer le cheval et le cavalier»<sup class="footnote">6</sup>.</p>
+	<p class="footnote">1. Mt. 14, 2.</p>
+	<p class="footnote">2. MS. 422.</p>
+	<p class="footnote">3. Gen. 1, 2.</p>
+	<p class="footnote">4. Jean 1, 2.</p>
+	<p class="footnote">5. Jean 2, 10.</p>
+	<p class="footnote">6. Ex. 15, 21.</p>
+	<p><em>ⲟⲩⲯⲩⲭⲏ ⲛ̀ⲑⲙⲏⲓ ⲛⲛⲉ ⲡϭ︤ⲥ︥ ϧⲟⲧⲃⲉⲥ</em> «le Seigneur ne tuera pas l'âme juste»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲡⲁϣⲏⲣⲓ ⲛⲁⲛⲟⲙⲓⲙⲟⲛ ⲙⲡⲉⲣ-ⲉⲣ ⲡⲟⲩⲱⲃϣ</em> «mon fils, n'oublie pas mes préceptes»<sup class="footnote">2</sup>. Quelquefois le pronom de rappel manque, cf. Andersson, AB. p. 8.</p>
+	<p><i>Prolepse des autres compléments:</i></p>
+	<p><em>ⲛⲓⲙⲱⲓⲧ ⲛ̀ⲧⲉ ⲛⲓⲁⲥⲉⲃⲏⲥ ⲙ̀ⲡⲉⲣϣⲉ ⲉⲣⲱⲟⲩ</em> «ne marche pas dans les voies des impies»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲛ̀ⲑⲱⲧⲉⲛ ⲱ ⲛⲓⲣⲱⲙⲓ ϯϯϩⲟ ⲉⲣⲱⲧⲉⲛ</em> «vous, ô hommes, je vous prie»<sup class="footnote">4</sup>.</p>
+	<p>Les noms de lieu sont remplacés par <em>ⲉⲙⲁⲩ</em>, <em>ⲙ̀ⲙⲁⲩ</em>: <em>ⲡⲓⲙⲁ ⲅⲁⲣ ⲉⲧⲉ ⲡⲉⲕⲁϩⲟ ⲙ̀ⲙⲟϥ ⲉϥⲉϣⲱⲡⲓ ⲙ̀ⲙⲁⲩ ⲛ̀ϫⲉ ⲡⲉⲕϩⲏⲧ</em> «là où est ton trésor, là est ton cœur»<sup class="footnote">5</sup>.</p>
+	<p><i>Prolepse du verbe:</i></p>
+	<p>De même que le sujet et les compléments, le verbe, avec l'auxiliaire et le pronom affixe sujet, peut aussi occuper la première place, lorsque le sujet est un nom; celui-ci est alors introduit par <em>ⲛ̀ϫⲉ-</em> (Ṣ. <em>ⲛϭⲓ-</em>) après le verbe ou après les compléments:</p>
+	<p><em>ⲁϥⲱⲣⲕ ⲛ̀ϫⲉ ⲡϭⲟⲓⲥ</em> «le Seigneur a juré»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲁⲩⲛⲁϩϯ ⲉⲣⲟϥ ⲛ̀ϫⲉ ⲛⲉϥⲙⲁⲑⲧⲏⲥ</em> «ses disciples crurent en lui»<sup class="footnote">7</sup>.</p>
+	<p><em>ⲁϥⲕⲱⲧ ⲙ̀ⲙⲁⲩ ⲛ̀ϫⲉ ⲁⲃⲣⲁⲁⲙ ⲙ̀ⲡⲓⲙⲁⲛ̀ⲉⲣϣⲱⲟⲩϣⲓ</em> «Abraham construisit là l'autel»<sup class="footnote">8</sup>.</p>
+	<p>Le pronom personnel, renvoyé après le verbe, ne prend pas <em>ⲛ̀ϫⲉ</em>: <em>ⲁⲛⲙⲟϣⲓ ⲛⲉⲙⲁϥ ⲁⲛⲟⲕ ⲛⲉⲙ ⲕⲉⲥⲛⲁⲩ</em> «nous marchâmes avec lui, moi et deux autres»<sup class="footnote">9</sup>.</p>
+	<p class="footnote">1. Pr. 10, 3.</p>
+	<p class="footnote">2. Pr. 3, 1.</p>
+	<p class="footnote">3. Pr. 4, 14.</p>
+	<p class="footnote">4. Pr. 8, 4.</p>
+	<p class="footnote">5. Mt. 6, 21.</p>
+	<p class="footnote">6. Ps. 109, 5.</p>
+	<p class="footnote">7. Jean 2, 11.</p>
+	<p class="footnote">8. Gen. 22, 9.</p>
+	<p class="footnote">9. MS. 422.</p>
+	<p><i>2. Avec les particules.</i></p>
+	<p><em>ⲓⲥ</em> et <em>ϩⲏⲡⲡⲉ</em>.</p>
+	<p>1. <em>ⲓⲥ</em> (Ṣ. <em>ⲉⲓⲥ</em>) «voici que» sert surtout à mettre en relief le sujet et le régime:</p>
+	<p><em>ⲓⲥ ⲫⲏ ⲉⲑⲟⲩⲁⲃ ⲁϥⲕⲱⲗϩ ⲉⲡⲓⲣⲟ</em> «voici que le saint frappe à la porte»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲓⲥ ⲣⲉⲃⲉⲕⲕⲁ ⲛⲁⲥⲛⲏⲟⲩ ⲉⲃⲟⲗ ⲉⲣⲉ ⲧⲉⲥϩⲩⲇⲣⲓⲁ ϩⲓ ⲧⲉⲥⲛⲁϩⲃⲓ</em> «voici que Rébecca venait, sa jarre sur l'épaule»<sup class="footnote">2</sup>.</p>
+	<p>2. Il est très souvent précédé de <em>ϩⲏⲡⲡⲉ</em> qui ajoute plus d'intensité au sens:</p>
+	<p><em>ϩⲏⲡⲡⲉ ⲓⲥ ⲡⲓⲥⲟⲓ ϥⲭⲏ ϧⲉⲛ ⲡⲉⲕⲃⲁⲗ</em> «voici que la poutre est dans ton œil»<sup class="footnote">3</sup>.</p>
+	<p><em>ϩⲏⲡⲡⲉ ⲓⲥ ⲧⲁⲓⲕⲟⲩϫⲓ ⲙ̀ⲃⲁⲕⲓ ⲥϧⲉⲛⲧ</em> «voici que cette petite ville est proche»<sup class="footnote">4</sup>.</p>
+	<p>3. <em>ϩⲏⲡⲡⲉ</em> (Ṣ. <em>ϩⲏⲏⲧⲉ</em>) est parfois employé seul; il peut être suivi d'un mot mis en relief ou du verbe lui-même avec ou sans prolepse:</p>
+	<p><em>ϩⲏⲡⲡⲉ ⲁⲛⲟⲕ ϯⲛⲁⲑⲣⲉ ⲡϩⲏⲧ ⲙ̀ⲫⲁⲣⲁⲱ ⲛ̀ϣⲟⲧ</em> «voici que j'endurcirai le cœur de Pharaon»<sup class="footnote">5</sup>.</p>
+	<p><em>ϩⲏⲡⲡⲉ ⲁϥⲙⲟⲩϯ ⲛ̀ϫⲉ ⲫϯ</em> «voici que Dieu a appelé»<sup class="footnote">6</sup>.</p>
+	<p><em>ϩⲏⲡⲡⲉ ⲁⲓⲉⲣϣⲫⲏⲣⲓ ⲙ̀ⲡⲉⲕϩⲟ</em> «voici que je t'ai admiré»<sup class="footnote">7</sup>.</p>
+	<p>4. Lorsque <em>ⲓⲥ</em> précède <em>ϩⲏⲡⲡⲉ</em>, la prolepse du nom n'a pas lieu; <em>ⲓⲥ ϩⲏⲡⲡⲉ</em> doit être suivi d'un verbe:</p>
+	<p><em>ⲓⲥ ϩⲏⲡⲡⲉ ϯⲛⲁϣⲉ ⲛⲏⲓ</em> «voici que je m'en irai»<sup class="footnote">8</sup>.</p>
+	<p><em>ⲓⲥ ϩⲏⲡⲡⲉ ⲁⲓⲧⲁⲙⲟⲕ ⲉ ⲛⲏ ⲧⲏⲣⲟⲩ ⲉⲧ ϧⲉⲛ ⲡⲁϩⲏⲧ</em> «voici que je t'ai informé de tout ce qu'il y a dans mon cœur»<sup class="footnote">9</sup>.</p>
+	<p class="footnote">1. MS. 423.</p>
+	<p class="footnote">2. Gen. 24, 45.</p>
+	<p class="footnote">3. Mt. 7, 4.</p>
+	<p class="footnote">4. Gen. 19, 20.</p>
+	<p class="footnote">5. Ex. 14, 17.</p>
+	<p class="footnote">6. Ex. 35, 30.</p>
+	<p class="footnote">7. Gen. 19, 21.</p>
+	<p class="footnote">8. Ex. 8. 25.</p>
+	<p class="footnote">9. OSE. 10.</p>
+	<p>De même que «voici» en français, <em>ⲓⲥ</em> peut former avec un nom une proposition nominale dans laquelle il remplit le rôle de prédicat.</p>
+	<p><em>ⲓⲥ ϯⲃⲱⲕⲓ ⲛ̀ⲧⲉ ⲡϭⲟⲓⲥ</em> «voici la servante du Seigneur»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲓⲥ ⲡⲉⲧⲉⲛⲛⲁⲩ ⲛ̀ϧⲱⲧⲉⲃ</em> «voici l'heure de votre mort»<sup class="footnote">2</sup>.</p>
+	<p>Il précède parfois le complément de temps:</p>
+	<p><em>ⲓⲥ ⲟⲩⲙⲏϣ ⲛ̀ⲉϩⲟⲟⲩ ϯⲥⲟⲙⲥ ⲉⲃⲟⲗ</em> «voici plusieurs jours que je considère»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲓⲥ ⲟⲩⲏⲣ ⲛ̀ⲣⲟⲙⲡⲓ ⲓⲥϫⲉⲛ ⲉⲧⲁⲕⲙⲟⲩ</em> «combien y a-t-il d'années que tu es mort?<sup class="footnote">4</sup>.</p>
+	<p>III. Accord des éléments.</p>
+	<p>L'accord se fait en copte d'après les règles générales; il n'y a à noter que le cas où le sujet est un <i>collectif</i> singulier:</p>
+	<p>1. Parfois le verbe se met au pluriel et l'épithète reste au sing.:</p>
+	<p><em>ⲟⲩⲛⲓϣϯ ⲙ̀ⲙⲏϣ ⲉϥⲙⲟϫⲧ ⲁⲩϣⲉ ⲉⲡϣⲱⲓ</em> «une foule nombreuse et mêlée monta»<sup class="footnote">5</sup>.</p>
+	<p>2. Lorsqu'il y a deux verbes et qu'ils sont séparés par le collectif, on peut avoir le premier au sing. et le second au plur.:</p>
+	<p><em>ⲉⲧⲁϥⲉⲣϩⲟϯ ⲇⲉ ⲛ̀ϫⲉ ⲡⲓⲗⲁⲟⲥ ⲧⲏⲣϥ ⲁⲩⲟϩⲓ ⲉⲣⲁⲧⲟⲩ</em> «après avoir été saisi de crainte, tout le peuple se tint debout»<sup class="footnote">6</sup>.</p>
+	<p>3. Enfin l'épithète peut être au pluriel et le verbe au singulier:</p>
+	<p><em>ⲉϥⲉⲛⲁⲩ ⲛ̀ϫⲉ ⲡⲓⲗⲁⲟⲥ ⲛⲏ ⲛ̀ⲑⲟⲕ ⲉⲧⲉⲕⲛ̀ϧⲏⲧⲟⲩ</em> «il verra, le peuple au milieu duquel tu habites»<sup class="footnote">7</sup>.</p>
+	<p class="footnote">1. C. 119, 25.</p>
+	<p class="footnote">2. MS. 423.</p>
+	<p class="footnote">3. OSE. 5.</p>
+	<p class="footnote">4. G. 128.</p>
+	<p class="footnote">5. Ex. 12, 6.</p>
+	<p class="footnote">6. Ex. 20, 18.</p>
+	<p class="footnote">7. Ex. 34, 10 (cf. AB, p. 9).</p>
 	</div>
 </div>
 	</body>
