--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11709,6 +11709,38 @@
 	<p class="footnote">5. Ex. 12, 6.</p>
 	<p class="footnote">6. Ex. 20, 18.</p>
 	<p class="footnote">7. Ex. 34, 10 (cf. AB, p. 9).</p>
+	<p>Chapitre XVII.</p>
+	<p>Proposition Nominale.</p>
+	<p>I. Proposition nominale simple.</p>
+	<p>La proposition nominale simple est celle qui ne contient pas de verbe, mais seulement un sujet et un prédicat. Le sujet est un nom ou un pronom; le prédicat, un substantif, un adjectif ou une construction prépositive (<em>جار ومجرور</em>).</p>
+	<p>Elle énonce une assertion générale avec le sens du présent.</p>
+	<p>Elle s'emploie dans deux cas:</p>
+	<p>1. Lorsque le sujet est un nom et le prédicat une construction prépositive:</p>
+	<p><em>ⲡⲁⲓⲱⲧ ⲛ̀ϧⲏⲧ</em> «mon père (est) en moi»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲡⲁⲙ̀ⲕⲁϩ ⲙ̀ⲡⲁⲙ̀ⲑⲟ ⲉⲃⲟⲗ ⲛ̀ⲥⲏⲟⲩ ⲛⲓⲃⲉⲛ</em> «ma douleur est devant moi en tout temps»<sup class="footnote">2</sup>.</p>
+	<p>C'est exactement la construction du premier présent (232, 3; 236, dernier exemple); la proposition est réellement nominale, car elle ne contient pas de verbe. Il en est de même lorsque le sujet est un des pronoms sujets du premier présent.</p>
+	<p>2. Quand le sujet est un pronom personnel absolu, et le prédicat, un nom, un adjectif ou une construction prépositive formée surtout de <em>ⲉⲃⲟⲗ ϧⲉⲛ</em>.</p>
+	<p class="footnote">1. Jean 14, 10.</p>
+	<p class="footnote">2. Ps. 37, 15.</p>
+	<p>Le prédicat doit toujours avoir un article; l'adjectif et la préposition ne prennent que l'article indéfini:</p>
+	<p><em>ⲛ̀ⲑⲟ ⲧⲉⲛⲥⲱⲛⲓ</em> «tu es notre sœur»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁⲛⲟⲕ ⲟⲩϩⲏⲕⲓ</em> «je suis pauvre»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲟⲩⲣⲉϥⲱⲟⲩ ⲛ̀ϩⲏⲧ</em> «tu es patient»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲟⲩⲗⲁⲟⲥ ⲉϥⲟⲩⲁⲃ</em> «tu es un peuple saint»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲁⲛⲟⲕ ⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ϯⲡⲟⲗⲓⲥ ⲉⲣⲙⲁⲛⲧ</em> «je suis de la ville d'Erment»<sup class="footnote">5</sup>.</p>
+	<p>Dans ces sortes de propositions, on exprime souvent la copule <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>; on doit l'exprimer lorsque le pronom est de la 3<sup>e</sup> pers. (360) (cf. AB, p. 23–25).</p>
+	<p>II. Proposition nominale avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>.</p>
+	<p>Ces trois mots sont invariables et ne diffèrent qu'en genre et en nombre:</p>
+	<p><i>sing. masc.</i> <em>ⲡⲉ</em> <em>هو</em>,</p>
+	<p><i>fém.</i> <em>ⲧⲉ</em> <em>هي</em>,</p>
+	<p><i>plur.</i> <em>ⲛⲉ</em> <em>هنَّا</em>.</p>
+	<p>Ils ne s'emploient que dans la proposition nominale où ils sont toujours placés après le prédicat et remplissent la fonction de <i>sujet grammatical</i>. On leur donne souvent le nom de <i>copule</i>, parce qu'ils servent généralement à unir le prédicat au <i>sujet réel</i>. Mais, à proprement parler, c'est un pronom démonstratif abrégé de <em>ⲫⲏ</em> <em>ⲑⲏ</em> <em>ⲛⲉ</em> (Ṣ. <em>ⲡⲏ</em> <em>ⲧⲏ</em> <em>ⲛⲏ</em>) et signifiant «ceci, celui-ci, celle-ci, ceux-ci, celles-ci».</p>
+	<p>Les propositions formées de <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> se réduisent à deux types principaux:</p>
+	<p class="footnote">1. Gen. 24, 60.</p>
+	<p class="footnote">2. Ps. 69, 9.</p>
+	<p class="footnote">3. Ps. 85, 12.</p>
+	<p class="footnote">4. Deut. 14, 2.</p>
+	<p class="footnote">5. Kef. 406.</p>
 	</div>
 </div>
 	</body>
