--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11741,6 +11741,116 @@
 	<p class="footnote">3. Ps. 85, 12.</p>
 	<p class="footnote">4. Deut. 14, 2.</p>
 	<p class="footnote">5. Kef. 406.</p>
+	<p>I. La proposition contient le prédicat et le sujet grammatical <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>:</p>
+	<p>(1) <em>ⲡⲁⲓⲱⲧ ⲡⲉ</em> «c'est mon père».</p>
+	<p>(2) <em>ⲁⲛⲟⲕ ⲡⲉ</em> «c'est moi»<sup class="footnote">1</sup>.</p>
+	<p>Dans cette sorte de proposition, on observe les règles de l'accord pour le <i>genre</i> et le <i>nombre</i>:</p>
+	<p>(1) <em>ⲧⲉⲛⲥⲁⲣⲝ ⲧⲉ</em> «c'est notre chair»<sup class="footnote">2</sup>.</p>
+	<p>(2) <em>ⲛⲉϥⲓⲟϯ ⲛⲉ</em> «ce sont ses parents»<sup class="footnote">3</sup>.</p>
+	<p>Le prédicat peut être un nom (1), un pronom absolu (2), un adjectif (3), ou une construction prépositive avec l'article indéfini (4):</p>
+	<p>(3) <em>ⲟⲩⲁⲅⲁⲑⲟⲥ ⲡⲉ</em> «il est bon <em>صالح هو</em>»<sup class="footnote">4</sup>.</p>
+	<p>(4) <em>ⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ⲧⲫⲉ ⲡⲉ</em> «c'est un habitant du ciel»<sup class="footnote">5</sup>.</p>
+	<p>Il peut être séparé du sujet par un complément déterminatif:</p>
+	<p><em>ⲟⲩⲁⲣⲭⲏⲁⲅⲅⲉⲗⲟⲥ ⲛ̀ⲧⲉ ⲧϫⲟⲙ ⲛ̀ⲧⲉ ⲛⲓⲫⲏⲟⲩⲓ ⲡⲉ</em> «c'est un archange de l'armée des cieux»<sup class="footnote">5</sup>.</p>
+	<p>Lorsqu'il y a deux adjectifs, le second peut se mettre après le sujet avec <em>ⲛ̀</em>:</p>
+	<p><em>ϩⲁⲛϣⲉⲙⲙⲱⲟⲩ ⲛⲉ ⲟⲩⲟϩ ⲛ̀ⲣⲉⲙⲛ̀ϫⲱⲓⲗⲓ</em> «ce sont des hôtes et des étrangers»<sup class="footnote">6</sup>.</p>
+	<p>II. La proposition contient le prédicat, la copule <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> et le nom qui est sujet réel:</p>
+	<p><em>ⲟⲩⲁⲅⲁⲑⲟⲥ ⲡⲉ ⲡϭⲟⲓⲥ</em> «le Seigneur est bon <em>صالح هو الرب</em>».</p>
+	<p><em>ⲡϭⲟⲓⲥ</em> qui, dans la pensée, est le sujet réel, rempit dans la phrase la fonction d'<i>apposition</i> (<em>بدل</em>) au sujet grammatical <em>ⲡⲉ</em>.</p>
+	<p class="footnote">1. Jean 8, 28.</p>
+	<p class="footnote">2. Gen. 37, 27.</p>
+	<p class="footnote">3. Jean 9, 2.</p>
+	<p class="footnote">4. Jean 7, 12.</p>
+	<p class="footnote">5. EM. dans la <i>chrestomathie</i>; voir aussi d'autres exemples à la même page.</p>
+	<p class="footnote">6. Hébr. 11, 13.</p>
+	<p>Cette sorte de proposition offre deux cas selon que le sujet réel est au dernier rang ou au premier.</p>
+	<p><i>Premier cas.</i> Le sujet est au dernier rang, la copule au milieu.</p>
+	<p>C'est le cas le plus fréquent; il s'emploie surtout quand le prédicat est un pronom absolu, personnel (8), démonstratif (5) ou interrogatif (6), ou bien un nom qu'on veut mettre en relief:</p>
+	<p>(8) <em>ⲁⲛⲟⲕ ⲡⲉ ⲡϭⲟⲓⲥ</em> «je suis le Seigneur <em>انا هو الرب</em>»<sup class="footnote">1</sup>.</p>
+	<p>(5) <em>ⲫⲁⲓ ⲡⲉ ⲡⲁϣⲏⲣⲓ</em> «voici mon fils <em>هذا هو ابني</em>»<sup class="footnote">2</sup>.</p>
+	<p>(5) <em>ⲑⲁⲓ ⲧⲉ ϯⲙⲉⲧⲙⲉⲑⲣⲉ</em> «tel est le témoignage <em>هذه هي الشهادة</em>»<sup class="footnote">3</sup>.</p>
+	<p>(5) <em>ⲛⲁⲓ ⲛⲉ ⲛⲓⲥⲁϫⲓ</em> «telles sont les paroles»<sup class="footnote">4</sup>.</p>
+	<p>(6) <em>ⲟⲩ ⲡⲉ ⲫⲁⲓ</em> «qu'est-ce que cela»<sup class="footnote">5</sup>.</p>
+	<p><em>ϣⲟⲙⲧ ⲛ̀ϣⲏⲣⲓ ⲛⲉ ⲛⲁⲓ ⲛ̀ⲧⲉ ⲛⲱⲉ</em> «ceux-ci étaient les trois fils de Noé»<sup class="footnote">6</sup>.</p>
+	<p>(7) <em>ⲟⲩⲛⲓϣϯ ⲡⲉ ⲡϭⲟⲓⲥ</em> «grand est le Seigneur»<sup class="footnote">7</sup></p>
+	<p>Quand il y a deux adjectifs, le second prend la particule de liaison <em>ⲛ̀</em>:</p>
+	<p>(7) <em>ⲟⲩⲣⲉϥϣⲉⲛϩⲏⲧ ⲟⲩⲟϩ ⲛ̀ⲛⲁⲏⲧ ⲡⲉ ⲡϭⲟⲓⲥ</em> «le Seigneur est clément et miséricordieux»<sup class="footnote">8</sup>.</p>
+	<p>S'il y a plus de deux adjectifs, le second et les suivants se renvoient de préférence après la copule:</p>
+	<p><em>ⲫⲁⲓ ⲟⲩⲃⲉⲗⲗⲉ ⲡⲉ ⲛ̀ⲕⲟⲩⲣ ⲛ̀ⲉⲃⲟ ⲛ̀ϭⲁⲗⲉ</em> «il est aveugle, sourd, muet, boiteux»<sup class="footnote">9</sup>.</p>
+	<p class="footnote">1. Ex. 20, 2.</p>
+	<p class="footnote">2. Mt. 3, 17.</p>
+	<p class="footnote">3. Jean 1, 19.</p>
+	<p class="footnote">4. Bar. 1, 1.</p>
+	<p class="footnote">5. Ex. 14, 5.</p>
+	<p class="footnote">6. Gen. 9, 19.</p>
+	<p class="footnote">7. Ex. 18, 11.</p>
+	<p class="footnote">8. Ps. 144, 8.</p>
+	<p class="footnote">9. G. 23.</p>
+	<p><i>Règles de l'accord.</i></p>
+	<p>1. Les règles de l'accord ne sont bien appliquées que lorsque le prédicat est un pronom de la 3<sup>e</sup> pers. (5) (6); quand c'est un pronom de la 1<sup>re</sup> ou de la 2<sup>e</sup> pers. sing. ou plur. (8), on emploie généralement <em>ⲡⲉ</em>.</p>
+	<p>(8) <em>ⲁⲛⲟⲛ ⲅⲁⲣ ⲡⲉ ⲡⲓⲉⲣⲫⲉⲓ ⲛ̀ⲧⲉ ⲫϯ</em> «car nous sommes le temple de Dieu»<sup class="footnote">1</sup>.</p>
+	<p>(8) <em>ⲛ̀ⲑⲟ ⲡⲉ ϯϣⲟⲩⲣⲏ ⲛ̀ⲛⲟⲩⲃ ⲛ̀ⲕⲁⲑⲁⲣⲟⲥ</em> «tu es l'encensoir d'or pur»<sup class="footnote">2</sup>.</p>
+	<p>(8) <em>ⲛ̀ⲑⲱⲧⲉⲛ ⲡⲉ ⲫⲟⲩⲱⲓⲛⲓ ⲙ̀ⲡⲓⲕⲟⲥⲙⲟⲥ</em> «vous êtes la lumière du monde»<sup class="footnote">3</sup>.</p>
+	<p>2. Lorsque le prédicat et le sujet sont des noms du même genre et du même nombre, <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> s'accorde avec eux (9); dans le cas contraire, on emploie toujours <em>ⲡⲉ</em> (10).</p>
+	<p>(6) <em>ⲉⲩⲥⲧⲁⲑⲓⲁ ⲧⲉ ⲧⲁⲙⲁⲩ</em> «Eustathia est ma mère»<sup class="footnote">4</sup>.</p>
+	<p>(9) <em>ϩⲁⲛ ϩⲉⲗⲗⲏⲛⲟⲥ ⲛⲉ ⲛⲁⲓⲟϯ</em> «mes parents sont païens»<sup class="footnote">5</sup>.</p>
+	<p>(10) <em>ⲧⲫⲉ ⲡⲉ ⲡⲁⲑⲣⲟⲛⲟⲥ</em> «le ciel est mon trône»<sup class="footnote">6</sup>.</p>
+	<p><i>Deuxième cas.</i> Le sujet est au premier rang, la copule au dernier.</p>
+	<p>Le sujet se met en évidence, en tête de la proposition, les autres éléments gardent leur place respective:</p>
+	<p><em>ⲡϭⲟⲓⲥ ⲟⲩⲁⲅⲁⲑⲟⲥ ⲡⲉ</em> «le Seigneur est bon».</p>
+	<p>Dans ce cas <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> s'accorde en genre et en nombre avec le sujet:</p>
+	<p class="footnote">1. 2 Cor. 6, 16.</p>
+	<p class="footnote">2. Th. 61.</p>
+	<p class="footnote">3. Mt. 5, 14.</p>
+	<p class="footnote">4. Kef. 407.</p>
+	<p class="footnote">5. Kef. 407.</p>
+	<p class="footnote">6. Act. 7, 49.</p>
+	<p><em>ϯⲥⲁⲣⲝ ⲟⲩⲁⲥⲑⲉⲛⲏⲥ ⲧⲉ</em> «la chair est faible»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲡⲓⲱⲥϧ ⲙⲉⲛ ⲟⲩⲛⲓϣϯ ⲡⲉ ⲛⲓⲉⲣⲅⲁⲧⲏⲥ ⲇⲉ ϩⲁⲛⲕⲟⲩϫⲓ ⲛⲉ</em> «la moisson est abondante, mais les ouvriers sont peu nombreux»<sup class="footnote">2</sup>.</p>
+	<p><em>ⲭⲁⲙ ⲇⲉ ⲫⲓⲱⲧ ⲛ̀ⲭⲁⲛⲁⲁⲛ ⲡⲉ</em> «Cham est le père de Chanaan»<sup class="footnote">3</sup>.</p>
+	<p>Lorsque le sujet est un pronom absolu, on peut remplacer la copule par ce pronom:</p>
+	<p><em>ⲁⲛⲟⲕ ⲛⲓⲙ ⲁⲛⲟⲕ ϫⲉ ⲛ̀ⲧⲉ ⲡⲁⲣⲁⲛ ⲓ ⲉⲃⲟⲗ ϧⲉⲛ ⲣⲱϥ ⲙ̀ⲡⲓⲥⲱⲧⲏⲣ</em> «qui suis-je, moi, pour que mon nom sorte de la bouche du Sauveur?»<sup class="footnote">4</sup>.</p>
+	<p><em>ⲛ̀ⲑⲟⲕ ⲟⲩ ⲉⲃⲟⲗ ϧⲉⲛ ⲡⲁⲕⲁⲥ ⲛ̀ⲑⲟⲕ</em> «oui, tu es de mes os, toi»<sup class="footnote">5</sup>.</p>
+	<p>La proposition nominale avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> peut rendre le sens de l'imparfait au moyen de l'auxiliaire <em>ⲛⲉ</em>. La place ordinaire de celui-ci est immédiatement avant le prédicat:</p>
+	<p><em>ϧⲉⲛ ⲧⲁⲣⲭⲏ ⲛⲉ ⲡⲥⲁϫⲓ ⲡⲉ</em> «au commencement était le Verbe»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲟⲩⲟϩ ⲛⲉ ⲟⲩⲛⲟⲩϯ ⲡⲉ ⲡⲓⲥⲁϫⲓ</em> «et le Verbe était Dieu»<sup class="footnote">7</sup>.</p>
+	<p><em>ⲛⲱⲉ ⲛⲉ ⲟⲩⲣⲱⲙⲓ ⲛ̀ⲑⲙⲏⲓ ⲡⲉ</em> «Noé était un homme juste»<sup class="footnote">8</sup>.</p>
+	<p><em>ⲛⲁⲓ ⲛⲉ ϩⲁⲛⲉⲩⲅⲉⲛⲏⲥ ⲛⲉ</em> «ceux-ci étaient nobles»<sup class="footnote">9</sup>.</p>
+	<p>Rarement le sujet se place entre <em>ⲛⲉ</em> et le prédicat:</p>
+	<p><em>ⲟⲛⲧⲱⲥ ⲛⲉ ⲡⲁⲓⲣⲱⲙⲓ ⲟⲩⲑⲙⲏⲓ ⲡⲉ</em> «vraiment cet homme était juste»<sup class="footnote">10</sup>.</p>
+	<p class="footnote">1. Mt. 86, 41.</p>
+	<p class="footnote">2. Luc 10, 2.</p>
+	<p class="footnote">3. Gen. 9, 18.</p>
+	<p class="footnote">4. AM. 96.</p>
+	<p class="footnote">5. Gen. 29, 14.</p>
+	<p class="footnote">6. Jean 1, 1.</p>
+	<p class="footnote">7. Jean 1, 1.</p>
+	<p class="footnote">8. Gen. 6, 9.</p>
+	<p class="footnote">9. Act. 17, 11.</p>
+	<p class="footnote">10. Luc 23, 47.</p>
+	<p>III. Proposition nominale avec <em>ⲉ</em>.</p>
+	<p>Lorsque la proposition nominale, simple (354) ou avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em> (356), se trouve dans le cas du 3<sup>ⲉ</sup> présent (238), elle est précédée de l'auxiliaire <em>ⲉ</em>:</p>
+	<p><em>ⲡⲱⲥ ⲛ̀ⲑⲟⲕ ⲟⲩⲓⲟⲩⲇⲁⲓ ⲕⲉⲣⲉⲧⲓⲛ ⲉⲧⲟⲧ ⲉⲥⲱ ⲉ ⲁⲛⲟⲕ ⲟⲩⲥϩⲓⲙⲓ ⲛ̀ⲥⲁⲙⲁⲣⲓⲧⲏⲥ</em> «comment toi, Juif, tu me demandes à boire, à moi qui suis Samaritaine?»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲁϥϫⲉⲙϥ ⲉ ⲡⲉϥϥⲧⲱⲟⲩ ⲛ̀ⲉϩⲟⲟⲩ ⲡⲉ ⲉϥⲭⲏ ϧⲉⲛ ⲡⲓⲙ̀ϩⲁⲩ</em> «il le trouva mis au tombeau depuis quatre jours»<sup class="footnote">2</sup>.</p>
+	<p>Lorsque la proposition est négative, on néglige généralement d'écrire <em>ⲉ</em> devant <em>ⲛ̀</em>:</p></p>
+	<p><p><em>ⲁϥⲛⲁⲩ ⲉ ⲟⲩⲣⲱⲙⲓ ⲙ̀ⲙⲁⲩ ⲛ̀ⲧϩⲉⲃⲥⲱ ⲙ̀ⲡⲓϩⲟⲡ ⲧⲟⲓ ϩⲓⲱⲧϥ ⲁⲛ</em> «il vit un homme sans l'habit nuptial»<sup class="footnote">3</sup>.</p>
+	<p>IV. Proposition nominale négative.</p>
+	<p>La négation de la proposition nominale s'obtient au moyen de <em>ⲁⲛ</em> qu'on place après le prédicat, jamais après le sujet.</p>
+	<p><em>ⲁⲛⲟⲕ ⲟⲩⲣⲱⲙⲓ ⲁⲛ</em> «je ne suis pas un homme»<sup class="footnote">4</sup>.</p>
+	<p>Négation avec <em>ⲡⲉ</em> <em>ⲧⲉ</em> <em>ⲛⲉ</em>:</p>
+	<p><em>ⲟⲩ ⲙⲉⲑⲙⲏⲓ ⲁⲛ ⲧⲉ</em> «ce n'est pas la vérité»<sup class="footnote">5</sup>.</p>
+	<p><em>ⲁⲛⲟⲕ ⲁⲛ ⲡⲉ ⲡⲭ︤ⲥ︥</em> «ce n'est pas moi qui suis le Christ»<sup class="footnote">6</sup>.</p>
+	<p><em>ⲧⲁⲙⲉⲧⲙⲉⲑⲣⲉ ⲟⲩⲙⲏⲓ ⲁⲛ ⲧⲉ</em> «mon témoignage n'est pas vrai»<sup class="footnote">7</sup>.</p>
+	<p>Quand le prédicat a l'article <em>ⲟⲩ</em> on peut employer <em>ⲛ̀ … ⲁⲛ</em>:</p>
+	<p><em>ⲡⲁⲓⲣⲱⲙⲓ ⲛ̀ ⲟⲩ ⲉⲃⲟⲗ ϩⲓⲧⲉⲛ ⲫϯ ⲁⲛ ⲡⲉ</em> «cet homme ne vient pas de Dieu»<sup class="footnote">8</sup>.</p>
+	<p class="footnote">1. Jean 4, 9.</p>
+	<p class="footnote">2. Jean 11, 17.</p>
+	<p class="footnote">3. Mt. 22. 11.</p>
+	<p class="footnote">4. Ps. 21, 7.</p>
+	<p class="footnote">5. MS. 423.</p>
+	<p class="footnote">6. Jean 1, 20.</p>
+	<p class="footnote">7. Jeau 5, 31.</p>
+	<p class="footnote">8. Jean 9, 16.</p>
 	</div>
 </div>
 	</body>
