--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11851,6 +11851,22 @@
 	<p class="footnote">6. Jean 1, 20.</p>
 	<p class="footnote">7. Jeau 5, 31.</p>
 	<p class="footnote">8. Jean 9, 16.</p>
+	<p>Chapitre XVIII.</p>
+	<p>Union des Propositions Entr'elles.</p>
+	<p>Les propositions coordonnées sont reliées entr'elles de différentes manières:</p>
+	<p>1. Souvent elles se suivent sans conjonction:</p>
+	<p><em>ⲁϥⲧⲱⲛϥ ⲁϥⲙⲟϣⲓ</em> «il se leva et marcha»<sup class="footnote">1</sup>.</p>
+	<p>Ceci a lieu surtout lorsque le verbe est au subjonctif (252).</p>
+	<p><em>ϯⲛⲁⲧⲱⲟⲩⲛⲟⲩ ⲛ̀ⲧⲁϣⲉ ⲛⲏⲓ ⲉϧⲟⲩⲛ ⲛ̀ⲧⲁϩⲉⲙⲥⲓ</em> «je me lèverai, j'entrerai, je m'assiérai»<sup class="footnote">2</sup>.</p>
+	<p>2. La conjonction ordinaire des propositions est <em>ⲟⲩⲟϩ</em>:</p>
+	<p><em>ⲟⲩⲟϩ ⲡⲉϫⲉ ⲫϯ ϫⲉ ⲙⲁⲣⲉϥϣⲱⲡⲓ ⲛ̀ϫⲉ ⲟⲩⲟⲩⲱⲓⲛⲓ ⲟⲩⲟϩ ⲁϥϣⲱⲡⲓ ⲛ̀ϫⲉ ⲟⲩⲟⲩⲱⲓⲛⲓ ⲟⲩⲟϩ ⲁϥⲛⲁⲩ ⲛ̀ϫⲉ ⲫϯ ⲉ ⲡⲓⲟⲩⲱⲓⲛⲓ ϫⲉ ⲛⲁⲛⲉϥ</em> «et Dieu dit: Que la lumière soit faite, et la lumière fut faite, et Dieu vit que la lumière était bonne»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲟⲩⲟϩ</em> s'emploie aussi pour relier une proposition principale à une proposition conditionnelle:</p>
+	<p><em>ⲉϣⲱⲡ ⲁⲕϣⲁⲛⲓⲣⲓ ⲙ̀ⲡⲁⲓⲥⲁϫⲓ ⲟⲩⲟϩ ⲉϥⲉϯϫⲟⲙ ⲛⲁⲕ ⲛ̀ϫⲉ ⲫϯ</em> «si tu fais cela, Dieu te rendra fort»<sup class="footnote">4</sup>.</p>
+	<p>3. Souvent les propositions se suivent tantôt sans conjonction, tantôt avec <em>ⲟⲩⲟϩ</em>:</p>
+	<p class="footnote">1. MS. 422.</p>
+	<p class="footnote">2. OSE. 5.</p>
+	<p class="footnote">3. Gen. 1, 3 et 4.</p>
+	<p class="footnote">4. Ex. 18, 23.</p>
 	</div>
 </div>
 	</body>
