--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -11867,6 +11867,27 @@
 	<p class="footnote">2. OSE. 5.</p>
 	<p class="footnote">3. Gen. 1, 3 et 4.</p>
 	<p class="footnote">4. Ex. 18, 23.</p>
+	<p><em>ⲉⲧⲁⲩⲓ̀ ⲇⲉ ⲉϧⲟⲩⲛ ⲁⲩⲛⲁⲩ ⲉⲣⲱⲟⲩ ⲛ̀ϫⲉ ⲛⲓϩⲉⲗⲗⲏⲛⲟⲥ ⲁⲩϣⲑⲟⲣⲧⲉⲣ ⲟⲩⲟϩ ⲁⲩϣⲱⲡⲓ ⲙ̀ⲫⲣⲏϯ ⲛ̀ⲛⲓⲱⲛⲓ</em> «quand ils furent entrés, les païens les virent, ils furent saisis de frayeur et devinrent (immobiles) comme des pierres»<sup class="footnote">1</sup>.</p>
+	<p><em>ⲟⲩⲟϩ ⲁϥⲁⲓⲁⲓ ⲁϥϣⲱⲡⲓ ϩⲓ ⲡϣⲁϥⲉ ⲁϥϣⲱⲡⲓ ⲇⲉ ⲛ̀ⲟⲩⲣⲉϥϩⲓⲥⲟⲑⲛⲉϥ</em> «et il grandit, habita dans le désert et devint tireur de flèches»<sup class="footnote">2</sup>.</p>
+	<p>4. On se sert de <em>ⲟⲩⲇⲉ</em> pour relier deux propositions négatives, ou une proposition positive à une négative.</p>
+	<p><em>ⲥⲉⲥⲓϯ ⲁⲛ ⲟⲩⲇⲉ ⲥⲉⲱⲥϧ ⲁⲛ</em> «ils ne sèment ni ne moissonnent»<sup class="footnote">3</sup>.</p>
+	<p><em>ⲙ̀ⲡⲓⲉⲙⲓ ϫⲉ ⲛⲓⲙ ⲡⲉ ⲉⲧⲁϥⲉⲣ ⲡⲁⲓϩⲱⲃ ⲟⲩⲇⲉ ⲛ̀ⲑⲟⲕ ⲙ̀ⲡⲉⲕⲧⲁⲙⲟⲓ ⲟⲩⲇⲉ ⲁⲛⲟⲕ ⲙ̀ⲡⲓⲥⲱⲧⲉⲙ</em> «je n'ai pas appris qui avait fait cela, ni toi-même tu ne m'as averti, ni moi-même je ne l'ai entendu dire»<sup class="footnote">4</sup>.</p>
+	<p>5. La proposition formée du 2<sup>e</sup> parfait <em>ⲉⲧⲁ</em> s'unit par elle-même à la suivante et elle se traduit généralement par «lorsque, après que» ou par un participe:</p>
+	<p><em>ⲉⲧⲁⲛⲓ̀ ⲉϧⲏⲧ ⲁⲛⲛⲁⲩ ⲉ ⲟⲩⲉⲣⲫⲉⲓ</em> «étant allés vers le Nord nous aperçûmes un temple»<sup class="footnote">5</sup>.</p>
+	<p>Pour l'union d'une proposition subordonnée à la principale, on emploie différentes conjonctions selon le sens (336–345).</p>
+	<p>Les propositions formées de <em>ⲉ</em> (248, 346), du 3<sup>e</sup> présent (238) et du 3<sup>e</sup> futur (240, 3) sont toujours dépendantes et s'unissent par elles-mêmes à la proposition principale.</p>
+	<p>Pour l'union des propositions au moyen du subjonctif, voir 252.</p>
+	<p class="footnote">1. MS. 424.</p>
+	<p class="footnote">2. Gen. 21, 20.</p>
+	<p class="footnote">3. Mt. 6, 26.</p>
+	<p class="footnote">4. Gen. 21, 26.</p>
+	<p class="footnote">5. MS. 422.</p>
+	<p>Chapitre XIX.</p>
+	<p>Proposition Interrogative.</p>
+	<p>L'interrogation peut être indiquée en copte uniquement par le ton de la voix, par un pronom interrogatif (100–107) ou par un adverbe.</p>
+	<p>Le verbe est généralement à un temps secondaire (2<sup>e</sup> et 3<sup>e</sup> prés. et fut., 2<sup>e</sup> parfait).</p>
+	<p><i>1. Par le ton de la voix.</i></p>
+	<p>L'interrogation n'est indiquée par aucune particule; elle se reconnaît seulement d'après le contexte:</p>
 	</div>
 </div>
 	</body>
